--- a/product_marble/views/marble_menu.xml
+++ b/product_marble/views/marble_menu.xml
@@ -5,11 +5,21 @@
         <!-- REPORTING -->
 
         <!-- Top Menu > Reporting -->
-        <!--menuitem name="Reporting" id="base.menu_reporting" groups="group_menu_reporting"/-->
         <record id="base.menu_reporting" model="ir.ui.menu">
             <field name="groups_id" eval="[(6,0,[ref('product_marble.group_menu_reporting'),
                                                  ref('base.group_system'),
                                                  ref('base.group_erp_manager')
+            ])]"/>
+        </record>
+
+        <!-- ACCOUNTING -->
+
+        <!-- Top Menu > Accounting -->
+        <record id="account.menu_finance" model="ir.ui.menu">
+            <field name="groups_id" eval="[(6,0,[ref('account.group_account_user'),
+                                                 ref('account.group_account_invoice'),
+                                                 ref('account.group_account_manager'),
+                                                 ref('product_marble.group_menu_accounting'),
             ])]"/>
         </record>
 
@@ -36,17 +46,23 @@
                                                  ref('base.group_erp_manager'),
                                                  ref('purchase.group_purchase_manager'),
                                                  ref('purchase.group_purchase_user'),
-                                                 ref('product_marble.group_purchase_adminis'),
             ])]"/>
         </record>
- 
-        <!-- Purchases > Picking -->
-        <record id="purchase.menu_action_picking_tree_in_move" model="ir.ui.menu">
+
+        <!-- Purchases > Invoice Control -->
+        <record id="purchase.menu_procurement_management_pending_invoice" model="ir.ui.menu">
             <field name="groups_id" eval="[(6,0,[ref('base.group_system'),
                                                  ref('base.group_erp_manager'),
                                                  ref('purchase.group_purchase_manager'),
                                                  ref('purchase.group_purchase_user'),
-                                                 ref('product_marble.group_purchase_adminis'),
+            ])]"/>
+        </record>
+
+        <record id="purchase.menu_action_picking_tree_picking_to_invoice" model="ir.ui.menu">
+            <field name="groups_id" eval="[(6,0,[ref('base.group_system'),
+                                                 ref('base.group_erp_manager'),
+                                                 ref('purchase.group_purchase_manager'),
+                                                 ref('purchase.group_purchase_user'),
             ])]"/>
         </record>
 
@@ -56,7 +72,6 @@
                                                  ref('base.group_erp_manager'),
                                                  ref('purchase.group_purchase_manager'),
                                                  ref('purchase.group_purchase_user'),
-                                                 ref('product_marble.group_purchase_adminis'),
             ])]"/>
         </record>
 
@@ -70,9 +85,20 @@
             ])]"/>
         </record>
 
+        <!-- Purchases > Products > Product Variants -->
+        <menuitem 
+            name="Product Variants" id="menu_purchase_product_variants" sequence="10"
+            action="act_open_product_variant_puchased" parent="purchase.menu_procurement_management_product"/>
+
+        <record id="product_marble.menu_purchase_product_variants" model="ir.ui.menu">
+            <field name="groups_id" eval="[(6,0,[ref('base.group_no_one'),
+                                                 ref('product_marble.group_purchase_adminis'),
+            ])]"/>
+        </record>
+ 
         <!-- Purchases > Products > Dimensions -->
         <menuitem 
-            name="Dimensions" id="menu_purchase_product_dimensions" sequence="10"
+            name="Dimensions" id="menu_purchase_product_dimensions" sequence="11"
             action="act_open_product_marble_dimension_view" parent="purchase.menu_procurement_management_product"/>
 
         <record id="product_marble.menu_purchase_product_dimensions" model="ir.ui.menu">
@@ -80,7 +106,6 @@
                                                  ref('base.group_erp_manager'),
                                                  ref('purchase.group_purchase_manager'),
                                                  ref('purchase.group_purchase_user'),
-                                                 ref('product_marble.group_purchase_adminis'),
             ])]"/>
         </record>
  
@@ -101,7 +126,14 @@
                                                  ref('product_marble.group_sale_adminis'),
             ])]"/>
         </record>
- 
+
+        <!-- Product Variants > Product Variants -->
+        <record id="product.menu_products" model="ir.ui.menu">
+            <field name="groups_id" eval="[(6,0,[ref('base.group_no_one'),
+                                                 ref('product_marble.group_sale_adminis'),
+            ])]"/>
+        </record>
+
         <!-- STOCK -->
 
         <!-- Top Menu > Warehouse -->
@@ -124,237 +156,22 @@
             <field name="groups_id" eval="[(4,ref('product_marble.group_stock_adminis'))]"/>
         </record>
 
+        <!-- Warehouse > Product > Product Variants -->
+        <menuitem 
+            name="Product Variants" id="menu_stock_product_variants" sequence="10"
+            action="act_open_product_variant_stock" parent="stock.menu_stock_product"/>
 
-
-        <!-- Reporting >  -->
-        <!--record id="base.menu_procurement_management_supplier_name" model="ir.ui.menu">
-            <field name="groups_id" eval="[(6,0,[ref('base.group_system'),
-                                                 ref('base.group_erp_manager')
-                                                 ref('purchase.group_purchase_manager')
-                                                 ref('purchase.group_purchase_user')
-                                                 ref('group_purchase_adminis')
+        <record id="product_marble.menu_stock_product_variants" model="ir.ui.menu">
+            <field name="groups_id" eval="[(6,0,[ref('base.group_no_one'),
+                                                 ref('product_marble.group_purchase_adminis'),
             ])]"/>
-        </record-->
-       
-       <!--menuitem name="Reporting" id="base.menu_reporting" groups="group_menu_reporting"/-->
-       <!--
-       <menuitem name="Purchases" id="base.menu_purchase_root" 
-               groups="purchase.group_purchase_manager,purchase.group_purchase_user,group_purchase_adminis"/>
+        </record>
 
-       <menuitem id="base.menu_procurement_management_supplier_name" name="Suppliers"
-               groups="purchase.group_purchase_manager,purchase.group_purchase_user,group_purchase_adminis"/>
-
-       <menuitem action="stock.action_receipt_picking_move" id="menu_action_picking_tree_in_move"
-               groups="purchase.group_purchase_manager,purchase.group_purchase_user"/>
-
-       <menuitem name="Products by Category" id="menu_product_by_category_purchase_form" action="product.product_category_action"
-               groups="purchase.group_purchase_manager,purchase.group_purchase_user,group_purchase_adminis"/>
-
-       <menuitem name="Products" id="menu_procurement_partner_contact_form" action="product_normal_action_puchased"
-               groups="purchase.group_purchase_manager,purchase.group_purchase_user,group_purchase_adminis"/>
-       -->
-        <!-- menu: Purchase > Products > Products(re-dirijo a Product Variant) -->
-        <!-- replace model "product.template" for "product.product" -->
-
-        <!-- menuitem 
-            name="Products" id="menu_procurement_partner_contact_form" 
-            action="product_normal_action_puchased" parent="menu_procurement_management_product"/-->
-
-        <!--menuitem 
-            id="menu_marble_purchase_product_variant" name="Products Variants" 
-            action="product_marble.product_normal_action_puchased" parent="purchase.menu_procurement_management_product"/-->
-
-        <!--record id="product_normal_action_puchased" model="ir.actions.act_window">
-            <field name="name">Products</field>
-            <field name="type">ir.actions.act_window</field>
-
-            < ! - -field name="res_model">product.template</field- - >
-            <field name="res_model">product.product</field>
-            
-            <field name="view_type">form</field>
-            <field name="view_mode">kanban,tree,form</field>
-            <field name="context">{"search_default_filter_to_purchase":1}</field>
-            <field name="search_view_id" eval="False"/> < ! - - Force empty - - >
-            <field name="view_id" eval="False"/> <! - - Force empty - - >
-            <field name="help" type="html">
-            <p class="oe_view_nocontent_create">
-                Click to define a new product.
-            </p><p>
-                You must define a product for everything you purchase, whether
-                it's a physical product, a consumable or services you buy to
-                subcontractants.
-            </p><p>
-                The product form contains detailed information to improve the
-                purchase process: prices, procurement logistics, accounting data,
-                available suppliers, etc.
-            </p>
-            </field>
-        </record-->
-
-        <!--record id="original_module.menu_id" model="ir.ui.menu">
-            <field name="groups_id" eval="[(4,ref('my_new_group_id'))]"/>
-        </record-->
-
-
-        <!--menuitem id="base.menu_purchase_root" groups="[(ref('group_marble_adminis'))]" /-->	    
-        
-        
-        <!-- menu: Sales -->
-        <!--menuitem   id="base.menu_sale_root"                      name="Sales" 
-                groups="group_marble_adminis" sequence="20" 
-        /-->
-        <!-- menu: Purchase -->
-        <!--menuitem   id="base.menu_purchase_root"                      name="Purchases" 
-                groups="group_marble_adminis" sequence="60" 
-        /-->	    
-        <!--menuitem   id="hr.menu_hr_root"                      name="Human Resources" 
-                groups="group_marble_adminis" sequence="50" 
-        /-->	    
-        
-        <!-- menu: Warehouse (Root) -->
-        <!--
-        <menuitem   id="stock.menu_stock_root"                      name="Warehouse" 
-                groups="group_marble_manager,group_marble_user" sequence="70" 
-        />
-        -->
-
-       <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
-        <!-- menu: Warehouse > Customer/Supplier -->
-
-                
-        <!-- menu: Warehouse > Customer/Supplier -->
-        <!--
-        <menuitem id="menu_marble_customer_supplier"                name="Customer / Supplier" 
-            parent="stock.menu_stock_root"                      sequence="1" 
-            groups="group_marble_manager,group_marble_user" 
-        />
-        -->
-       
-        <!-- menu: Warehouse > Customer/Supplier > Cusomer -->
-        <!--
-        <menuitem id="menu_marble_customer"                         name="Customer" 
-              parent="menu_marble_customer_supplier"            sequence="1" 
-              action="base.action_partner_customer_form" 
-        />
-        -->
-
-        <!-- menu: Warehouse > Customer/Supplier > Supplier -->
-        <!--
-        <menuitem id="menu_marble_supplier"                         name="Supplier" 
-              parent="menu_marble_customer_supplier"             sequence="2" 
-              action="base.action_partner_supplier_form" 
-        />
-        -->
-
-        <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
-
-        <!-- menu: Warehouse > ... by Orders  -->
-        <!--
-        <menuitem   id="stock.menu_stock_warehouse_mgmt"            name="Receive/Deliver By Orders" 
-                parent="stock.menu_stock_root"                  sequence="1" 
-                groups="group_marble_manager,group_marble_user" 
-        />
-        -->
-        <!--
-                groups="stock.group_stock_manager,stock.group_stock_user" 
-                groups="group_marble_manager,group_marble_user" 
-        -->
-
-        <!-- menu: Warehouse > ... Moves  -->
-        <!--
-        <menuitem   id="stock.menu_stock_products_moves"            name="Receive/Deliver Products" 
-                parent="stock.menu_stock_root"                  sequence="3" 
-                groups="stock.group_stock_manager,stock.group_stock_user" 
-        />
-        -->
-
-        <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
-
-        <!-- menu: Warehouse > Product > Product -->
-        <!--
-        <menuitem   id="stock.menu_stock_products_menu" 
-                parent="stock.menu_stock_product"               sequence="4"
-                action="act_open_product_marble_all_view"
-        />
-        -->
-
-        <!-- menu: Warehouse > Product > Raw Material -->
-        <!--
-        <menuitem   id="menu_product_marble_raw_material"           name="- Raw Material" 
-                parent="stock.menu_stock_product"               sequence="5" 
-                action="act_open_product_marble_raw_material_view" 
-                groups="group_marble_manager,group_marble_user" 
-        />
-        -->
-
-        <!-- menu: Warehouse > Product > Bachas -->
-        <!--
-        <menuitem   id="menu_product_marble_bachas"                 name="- Bachas" 
-                parent="stock.menu_stock_product"               sequence="6" 
-                action="act_open_product_marble_bachas_view" 
-                groups="group_marble_manager,group_marble_user" 
-        />
-        -->
-
-        <!-- menu: Warehouse > Product > Inputs -->
-        <!--
-        <menuitem   id="menu_product_marble_inputs"                 name="- Inputs" 
-                parent="stock.menu_stock_product"               sequence="7" 
-                action="act_open_product_marble_inputs_view" 
-                groups="group_marble_manager,group_marble_user" 
-        />
-        -->
-
-        <!-- menu: Warehouse > Product > Services -->
-        <!--
-        <menuitem   id="menu_product_marble_services"               name="- Services" 
-                parent="stock.menu_stock_product"               sequence="8" 
-                action="act_open_product_marble_services_view" 
-                groups="group_marble_manager,group_marble_user" 
-        />
-        -->
-
-        <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
-
-        <!-- menu: Warehouse > Product > Dimensions -->
+        <!-- Warehouse > Product > Dimensions -->
         <menuitem   id="menu_product_marble_dimensions"             name="Dimensions" 
-                parent="stock.menu_stock_product"               sequence="10" 
+                parent="stock.menu_stock_product"               sequence="11" 
                 action="act_open_product_marble_dimension_view" 
         />
-        <!--
-        <menuitem   id="menu_product_marble_dimensions"             name="Dimensions" 
-                parent="stock.menu_stock_product"               sequence="10" 
-                action="act_open_product_marble_dimension_view" 
-                groups="group_marble_manager,group_marble_user" 
-        />
-        -->
 
-        <!-- menu: Warehouse > Dimension > Plaque -->
-        <!--
-        <menuitem   id="menu_product_marble_dimension_plaque"      name="- Plaque" 
-                parent="stock.menu_stock_product"               sequence="12" 
-                action="act_open_product_marble_dim_plaque_view" 
-                groups="group_marble_manager,group_marble_user" 
-        />
-        -->
-
-        <!-- menu: Warehouse > Dimension > Marmeta -->
-        <!--
-        <menuitem   id="menu_product_marble_dimension_marmeta"      name="- Marmeta" 
-                parent="stock.menu_stock_product"               sequence="14" 
-                action="act_open_product_marble_dim_marmeta_view" 
-                groups="group_marble_manager,group_marble_user" 
-        />
-        -->
-
-        <!-- menu: Warehouse > Dimension > Leftover -->
-        <!--
-        <menuitem   id="menu_product_marble_dimension_leftover"     name="- Leftover" 
-                parent="stock.menu_stock_product"               sequence="16" 
-                action="act_open_product_marble_dim_leftover_view" 
-                groups="group_marble_manager,group_marble_user" 
-        />
-        -->
- 
     </data>
 </openerp>
