--- a/product_marble/views/product_view.xml
+++ b/product_marble/views/product_view.xml
@@ -1,90 +1,28 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <openerp>
 	<data>
-    
-        <!--record id="view_product_marble_tree" model="ir.ui.view">
-            <field name="name">product.marble.tree</field>
-            <field name="model">product.product</field>
-            <field eval="7" name="priority"/>
-            <field name="inherit_id" ref="product.product_product_tree_view"/>
-            <field name="arch" type="xml">
-                <tree string="Products" position="replace">
-                <tree colors="red:virtual_available&lt;0;blue:virtual_available&gt;=0 and state in ('draft', 'end', 'obsolete');black:virtual_available&gt;=0 and state not in ('draft', 'end', 'obsolete')" string="Products">
-                    <field name="default_code"/>
-                    <field name="categ_name"/>
-                    <field name="name"/>
-                    <field name="attrs_material"/>
-                    <field name="type" invisible="1" position="replace"/>
-                    <field name="variants" groups="product.group_product_variant" position="replace"/>
-                    <field name="uom_id" string="Unit of Measure" groups="product.group_uom" position="replace"/>
-                    <field name="qty_available" position="replace"/>
-                    <field name="virtual_available" invisible="1"/>
-                    <field name="lst_price" position="replace"/>
-                    <field name="price" invisible="not context.get('pricelist',False)" position="replace"/>
-                    <field name="standard_price" invisible="1" position="replace"/>
-                    <field name="state"/>
-                    <field name="company_id" groups="base.group_multi_company" invisible="1" position="replace"/>
-                </tree>
-                </tree>
-            </field>
-        </record-->
-
         <!-- - - - - - - - - - - - - - Searchs - - - - - - - - - -->
-
-        <record id="view_product_marble_search_all" model="ir.ui.view">
-            <field name="name">product.marble.search.all</field>
-            <field name="model">product.product</field>
-            <field name="inherit_id" ref="stock.product_search_form_view_stock"/>
+        <record id="product_template_search_marble_view" model="ir.ui.view">
+            <field name="name">product.template.search</field>
+            <field name="model">product.template</field>
+            <field name="inherit_id" ref="stock.product_template_search_form_view_stock"/>
             <field name="arch" type="xml">
-                <search string="Product" position="replace">
-                <search string="Product">
-
-                   <filter string="Raw Material" icon="terp-accessories-archiver" domain="['|',('categ_name','ilike','raw'),('categ_name','ilike','%materia%prima%')]" help="Raw material products" /> 
-                   <filter string="Bachas"       icon="terp-accessories-archiver" domain="[('categ_name','ilike','bacha')]" help="Bachas products" />
-                   <filter string="Inputs"       icon="terp-accessories-archiver" domain="['|',('categ_name','ilike','input'),('categ_name','ilike','%insumo%')]" help="Inputs products" />
-                   <filter string="Services"     icon="terp-accessories-archiver" domain="[('categ_name','ilike','servic%')]" help="Services products" />
-                   <separator/>
-                   <filter string="Can be Sold" name="filter_to_sell" icon="terp-accessories-archiver-minus" domain="[('sale_ok','=',1)]"/>
-
-                   <group expand="0" string="Context...">
-                       <field name="pricelist_id" widget="selection" context="{'pricelist': self}" filter_domain="[]" groups="product.group_sale_pricelist"/> 
-                       <field name="company_id" groups="base.group_multi_company"/>
-                   </group>
-                   <group  expand='0' string='Group by...'>
-                       <filter string='Category' icon="terp-stock_symbol-selection" domain="[]" context="{'group_by' : 'categ_id'}"/>
-                       <filter string='Default Unit of Measure' icon="terp-mrp" domain="[]" context="{'group_by' : 'uom_id'}"/>
-                       <filter string='Type' icon="terp-stock_symbol-selection" domain="[]" context="{'group_by' : 'type'}"/>
-                       <filter string='Company' icon="terp-go-home" domain="[]" context="{'group_by' : 'company_id'}" groups="base.group_multi_company"/>
-                   </group>
-
-                </search>
-                </search>
+                <group string="Group by..." position="before">
+                    <newline/>
+                    <field name="prod_type"/>
+                    <filter sring="Raw Material" domain="[('prod_type','=','raw')]" help="Raw Material products" /> 
+                    <filter string="Bachas"   domain="[('prod_type','=','bacha')]" help="Bachas products" />
+                    <filter string="Inputs"   domain="[('prod_type','=','input')]" help="Inputs products" />
+                    <filter string="Services" domain="[('prod_type','=','service')]" help="Services products" />
+                </group>
+                <group string="Group by..." position="inside">
+                    <filter name="prod_type" string="Product Type" domain="[]" context="{'group_by':'prod_type'}" />
+                </group>
             </field>
         </record>
 
-        <!--record id="view_product_marble_search_others" model="ir.ui.view">
-            <field name="name">product.marble.search.others</field>
-            <field name="model">product.product</field>
-            <field name="arch" type="xml">
-                <search string="Product">
-                  <filter string="Can be Sold" name="filter_to_sell" icon="terp-accessories-archiver-minus" domain="[('sale_ok','=',1)]"/>
-                  <group expand="0" string="Context...">
-                       <field name="pricelist_id" widget="selection" context="{'pricelist': self}" filter_domain="[]" groups="product.group_sale_pricelist"/> 
-                       <field name="company_id" groups="base.group_multi_company"/>
-                   </group>
-                   <group  expand='0' string='Group by...'>
-                       <filter string='Category' icon="terp-stock_symbol-selection" domain="[]" context="{'group_by' : 'categ_id'}"/>
-                       <filter string='Default Unit of Measure' icon="terp-mrp" domain="[]" context="{'group_by' : 'uom_id'}"/>
-                       <filter string='Type' icon="terp-stock_symbol-selection" domain="[]" context="{'group_by' : 'type'}"/>
-                       <filter string='Company' icon="terp-go-home" domain="[]" context="{'group_by' : 'company_id'}" groups="base.group_multi_company"/>
-                   </group>
-                </search>
-            </field>
-        </record-->
-        
-        <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
-
         <!-- Muevo 'categ_id' de page 'Accounting' a page 'Information' -->
+
         <record id="product_template_form_view" model="ir.ui.view">
             <field name="name">product.template.form.inherit</field>
             <field name="model">product.template</field>
@@ -122,25 +60,22 @@
             <!--field name="inherit_id" ref="purchase.view_product_normal_purchase_buttons_from" /-->
             <!--field name="mode">primary</field-->
             <field name="arch" type="xml">
-
-                <!-- 2014.09.21 - arosenbrock - bug in v8.0 Final -->
-                <field name="is_product_variant" position="after">
-                    <field name="product_variant_count" invisible="1"/> 
-                </field>
-                <!-- -->
-
+               <!-- 2014.09.21 - arosenbrock - bug in v8.0 Final -->
+               <field name="is_product_variant" position="after">
+                   <field name="product_variant_count" invisible="1"/> 
+               </field>
                <!--page string="Variants" position="replace"/-->
-
                <page string="Information" position="replace">
                 <page string="Information">
                     <group colspan="4">
                         <group>
                             <field name="categ_id"/>
-                            <field name="type" attrs="{'readonly':['|','|',('is_raw','=',True),('is_bacha','=',True),('is_input','=',True)]}"/>
+                            <field name="prod_type" invisible="1"/>
+                            <field name="type" attrs="{'readonly':[('prod_type','in',['raw','bacha','input'])]}"/>
                             <field name="uom_id" 
-                                  attrs="{'readonly':[('uom_readonly','=',True)]}" 
-                              on_change="onchange_uom(uom_id,uom_po_id)"
-                                 groups="product.group_uom"
+                                  attrs="{'readonly':[('prod_type','in',['raw','bacha'])]}" 
+                                  on_change="onchange_uom(uom_id,uom_po_id)"
+                                  groups="product.group_uom"
                             />
                         </group>
                         <group>
@@ -148,127 +83,16 @@
                             <field name="list_price"/>
                         </group>
                     </group>
-
                     <group colspan="4">
                         <field name="company_id" groups="base.group_multi_company" widget="selection"/>
                     </group>
                     <field name="description" placeholder="describe the product characteristics..."/>
- 
-                    <field name="is_raw" invisible="1"/>
+                    <!--field name="is_raw" invisible="1"/>
                     <field name="is_bacha" invisible="1"/>
                     <field name="is_input" invisible="1"/>
-                    <field name="uom_readonly" invisible="1"/>
+                    <field name="uom_readonly" invisible="1"/-->
                 </page>
-               
-                <page string="Raw Material" attrs="{'invisible':[('is_raw','=',False)]}">
-                    <group colspan="4">
-                        <group>
-                            <field name="raw_material"/>
-                            <field name="raw_color"/>
-                        </group>
-                        <group>
-                            <field name="raw_finished"/>
-                        </group>
-                    </group>
-<!--
-                    <notebook>
-                        <page string="Dimensions">
-                            <field name="dimension_ids" context="{'product_id':id}">
-                                <tree string="Dimensions">
-                                    <field name="dimension"/>
-                                    <field name="type"/>
-                                    <field name="state" invisible="1"/>
-                                    <field name="total_units"/>
-                                    <field name="total_m2"/>
-                               </tree>
-                            </field>
-                            <group class="oe_subtotal_footer oe_right">
-                                <field name="dimension_total_m2" widget="statinfo"/>
-                          </group>
-                            <div class="oe_clear"/>
-                        </page>
-
-                       <page string="Stock Moves">
-                            <field name="stock_move_ids">
-                                <tree string="Stock Moves">
-                                    <field name="date"/>
-                                    <field name="is_raw" invisible="1"/>
-                                    <field name="description"/>
-
-                                    <field name="qty_dimension" string="Units"/>
-                                    <field name="qty_product"/>
-                                    <field name="qty_balance"/>
-
-                                    <field name="product_uom"
-                                         string="UOM"/>
-                                    <field name="state"/>
-                                </tree>
-                            </field>
-                        </page>
-
-                    </notebook>-->
-                </page>
-
-                <page string="Bacha" attrs="{'invisible':[('is_bacha','=',False)]}">
-                    <group colspan="4">
-                        <group>
-                            <field name="bacha_tipo"/>
-                            <field name="bacha_marca"/>
-                            <field name="bacha_material"/>
-                            <field name="bacha_acero"/>
-                            <field name="bacha_colocacion"/>
-                        </group>
-                        <group>
-                            <field name="bacha_ancho"/>
-                            <field name="bacha_largo"/>
-                            <field name="bacha_prof"/>
-                            <field name="bacha_diam"/>
-                        </group>
-                    </group>
-                </page>
-
-            </page>
-           </field>
-        </record>
-        <record id="view_product_marble_form" model="ir.ui.view">
-            <field name="name">product.product.marble.form</field>
-            <field name="model">product.product</field>
-            <field name="inherit_id" ref="product.product_normal_form_view"/>
-            <!--field name="inherit_id" ref="product.product_normal_form_view" /-->
-            <!--field name="inherit_id" ref="stock.product_form_view_procurement_button" /-->
-            <!--field name="inherit_id" ref="purchase.view_product_normal_purchase_buttons_from" /-->
-            <!--field name="mode">primary</field-->
-            <field name="arch" type="xml">
-               <page string="Information" position="replace">
-                <page string="Information">
-                    <group colspan="4">
-                        <group>
-                            <field name="categ_id"/>
-                            <field name="type" attrs="{'readonly':['|','|',('is_raw','=',True),('is_bacha','=',True),('is_input','=',True)]}"/>
-                            <field name="uom_id" 
-                                  attrs="{'readonly':[('uom_readonly','=',True)]}" 
-                              on_change="onchange_uom(uom_id,uom_po_id)"
-                                 groups="product.group_uom"
-                            />
-                        </group>
-                        <group>
-                            <field name="active"/>
-                            <field name="list_price"/>
-                        </group>
-                    </group>
-
-                    <group colspan="4">
-                        <field name="company_id" groups="base.group_multi_company" widget="selection"/>
-                    </group>
-                    <field name="description" placeholder="describe the product characteristics..."/>
- 
-                    <field name="is_raw" invisible="1"/>
-                    <field name="is_bacha" invisible="1"/>
-                    <field name="is_input" invisible="1"/>
-                    <field name="uom_readonly" invisible="1"/>
-                </page>
-               
-                <page string="Raw Material" attrs="{'invisible':[('is_raw','=',False)]}">
+                <page string="Raw Material" attrs="{'invisible':[('prod_type','!=','raw')]}">
                     <group colspan="4">
                         <group>
                             <field name="raw_material"/>
@@ -294,29 +118,23 @@
                           </group>
                             <div class="oe_clear"/>
                         </page>
-
                        <page string="Stock Moves">
                             <field name="stock_move_ids">
                                 <tree string="Stock Moves">
                                     <field name="date"/>
-                                    <field name="is_raw" invisible="1"/>
+                                    <!--field name="is_raw" invisible="1"/-->
                                     <field name="description"/>
-
                                     <field name="qty_dimension" string="Units"/>
                                     <field name="qty_product"/>
                                     <field name="qty_balance"/>
-<!--
-                                    <field name="product_uom"
-                                         string="UOM"/>-->
+                                    <field name="product_uom" string="UOM"/>
                                     <field name="state"/>
                                 </tree>
                             </field>
                         </page>
-
                     </notebook>
                 </page>
-
-                <page string="Bacha" attrs="{'invisible':[('is_bacha','=',False)]}">
+                <page string="Bacha" attrs="{'invisible':[('prod_type','!=','bacha')]}">
                     <group colspan="4">
                         <group>
                             <field name="bacha_tipo"/>
@@ -333,10 +151,24 @@
                         </group>
                     </group>
                 </page>
-
             </page>
-
+            
            </field>
         </record>
-   </data>
+
+        <record id="product_template_only_form_marble_view" model="ir.ui.view">
+            <field name="name">product.template.product.form</field>
+            <field name="model">product.template</field>
+            <field name="mode">primary</field>
+            <field name="priority" eval="7" />
+            <field name="inherit_id" ref="product.product_template_only_form_view"/>
+            <field name="arch" type="xml">
+                <page name="variants" position="attributes">
+                    <attribute name="attrs">{'invisible':[('prod_type','!=','input')]}</attribute>
+                </page>
+            </field>
+        </record>
+
+
+  </data>
 </openerp>
