--- a/product_marble/views/res_partner_view.xml
+++ b/product_marble/views/res_partner_view.xml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <openerp>
     <data>
-        <!--record id="view_marble_partner_property_form" model="ir.ui.view">
-            <field name="name">res.partner.property.form.inherit</field>
+        <record id="view_marble_partner_property_form" model="ir.ui.view">
+            <field name="name">res.partner.purchase.property.form.inherit</field>
             <field name="model">res.partner</field>
-            <field name="priority">2</field>
-            <field name="inherit_id" ref="base.view_partner_form"/>
+            <field name="inherit_id" ref="purchase.view_partner_property_form"/>
+            <field name="priority">36</field>
             <field name="arch" type="xml">
-                <page name="sales_purchases" position="after">
-                    <page string="Accounting" col="4" name="accounting" attrs="{'invisible': [('is_company','=',False),('parent_id','!=',False)]}" 
-                          groups="account.group_account_invoice,product_marble.group_sale_adminis,product_marble.group_purchase_adminis">
+                <page string="Accounting" position="replace">
+                <page string="Accounting" col="4" name="accounting" attrs="{'invisible': [('is_company','=',False),('parent_id','!=',False)]}" 
+                      groups="account.group_account_invoice, product_marble.group_sale_adminis, product_marble.group_pruchase_adminis" >
                     <group>
                         <group>
                             <field name="property_account_position" widget="selection"/>
@@ -39,67 +39,14 @@
                         </tree>
                     </field>
                 </page>
-                <page string="Accounting" name="accounting_disabled" attrs="{'invisible': ['|',('is_company','=',True),('parent_id','=',False)]}" groups="account.group_account_invoice">
+                <page string="Accounting" name="accounting_disabled" attrs="{'invisible': ['|',('is_company','=',True),('parent_id','=',False)]}" 
+                      groups="account.group_account_invoice, product_marble.group_sale_adminis, product_marble.group_pruchase_adminis">
                     <div>
                         <p>Accounting-related settings are managed on <button name="open_commercial_entity" type="object" string="the parent company" class="oe_link"/></p>
                     </div>
                 </page>
                 </page>
             </field>
-        </record-->
- 
-       <!--record id="product_marble_view_res_partner_filter" model="ir.ui.view">
-            <field name="name">res.partner.select</field>
-            <field name="model">res.partner</field>
-            <field name="inherit_id" ref="base.view_res_partner_filter"/>
-            <field name="arch" type="xml">
-                <field name="name" position="replace">
-                     <field name="name" filter_domain="['|','|','|','|','|','|','|','|','|','|','|','|','|','|','|','|','|','|','|','|','|','|','|',
-                        ('name','ilike',self),
-                        ('parent_id','ilike',self),
-                        ('ref','=',self),
-
-                        ('title','ilike',self),
-                        ('vat','ilike',self),
-                        ('bank_ids','ilike',self),
-                        ('comment','ilike',self),
-                        ('category_id','ilike',self),
-                        ('ean13','ilike',self),
-                        ('function','ilike',self),
-                        ('type','ilike',self),
-                        ('street','ilike',self),
-                        ('street2','ilike',self),
-                        ('zip','ilike',self),
-                        ('city','ilike',self),
-                        ('state_id','ilike',self),
-                        ('country_id','ilike',self),
-                        ('email','ilike',self),
-                        ('phone','ilike',self),
-                        ('fax','ilike',self),
-                        ('mobile','ilike',self),
-                        ('birthdate','ilike',self),
-                        ('user_ids','ilike',self),
- 
-                        ('website','ilike',self),
-                    ]" />
-               </field>
-           </field>
-        </record-->
-
-        <!--record id="view_marble_partner_form" model="ir.ui.view">
-            <field name="name">res.partner.form</field>
-            <field name="model">res.partner</field>
-            <field name="inherit_id" ref="base.view_partner_form"/>
-            <field name="arch" type="xml">
-                <xpath expr="//page[@string='Accounting']" position="attributes">
-                    <attribute name="groups">[account.group_account_invoice,product_marble.group_sale_adminis,product_marble.group_purchase_adminis]</attribute>> 
-                    <page string="Accounting" col="4" name="accounting" 
-                          attrs="{'invisible': [('is_company','=',False),('parent_id','!=',False)]}" 
-                          groups="account.group_account_invoice,product_marble.group_sale_adminis,product_marble.group_purchase_adminis"
-                    >
-                </xpath>
-            </field>
-        </record-->
-
-  </data>
+        </record>
+    </data>
 </openerp>
